yaml/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: tripviewer
  namespace: fe
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: tripviewer
          servicePort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: api-ingress
  namespace: api
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: poi
          servicePort: 8080
        path: /api/docs/poi
      - backend:
          serviceName: poi
          servicePort: 8080
        path: /api/poi/healthcheck
      - backend:
          serviceName: poi
          servicePort: 8080
        path: /api/poi
      - backend:
          serviceName: poi
          servicePort: 8080
        path: /swagger/docs/poi
      - backend:
          serviceName: trips
          servicePort: 8083
        path: /api/docs/trips
      - backend:
          serviceName: trips
          servicePort: 8083
        path: /api/trips/healthcheck
      - backend:
          serviceName: trips
          servicePort: 8083
        path: /api/trips
      - backend:
          serviceName: trips
          servicePort: 8083
        path: /swagger/docs/trips
      - backend:
          serviceName: trips
          servicePort: 8083
        path: /api/json
      - backend:
          serviceName: userprofile
          servicePort: 8082
        path: /api/docs/user
      - backend:
          serviceName: userprofile
          servicePort: 8082
        path: /api/user/healthcheck
      - backend:
          serviceName: userprofile
          servicePort: 8082
        path: /api/user
      - backend:
          serviceName: userprofile
          servicePort: 8082
        path: /swagger/docs/user
      - backend:
          serviceName: ujava
          servicePort: 8081
        path: /api/docs/user-java
      - backend:
          serviceName: ujava
          servicePort: 8081
        path: /api/documentation/user-java
      - backend:
          serviceName: ujava
          servicePort: 8081
        path: /api/documentation/user-java/swagger-ui.html
      - backend:
          serviceName: ujava
          servicePort: 8081
        path: /api/user-java/healthcheck
      - backend:
          serviceName: ujava
          servicePort: 8081
        path: /api/user-java
      - backend:
          serviceName: ujava
          servicePort: 8081
        path: /api/swagger-resources
      - backend:
          serviceName: ujava
          servicePort: 8081
        path: /api/api-docs
      - backend:
          serviceName: ujava
          servicePort: 8081
        path: /api/user-java/*
